<resources>
    <string name="app_name">wait</string>
    <string name="enter_the_number">Enter the Number</string>
    <string name="textview">TextView</string>
    <string name="factorial">!</string>
    <string name="answer">Answer</string>
    <string name="cube">Cube</string>
    <string name="square">Square</string>
    <string name="facto">Factorial (!)</string>
    <string name="squareroot">SquareRoot</string>
    <string name="cuberoot">CubeRoot</string>
</resources>